tester/src/test/aya/failure/struct/no-such-field.aya.txt
In file $FILE:6:2 ->

  4 | 
  5 | \def make-vec2 (A B : \Set) (a : A) (b : B) : Vec2 A B =>
  6 |   \new Vec2 A B { | x => a | y => b | z => a }
        ^------------------------------------------^
  
Error: No such field(s): `z`
Tycking interrupted due to errors.
What are you doing?
